tg-6307 [FE] Agrega pop-up de Evolución de ingreso.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -108,7 +108,8 @@
 						<ng-container *ngIf="!epicrisisDoc">
 							<ng-container *ngIf="!anamnesisDoc || !anamnesisDoc.confirmed">
 								<button mat-menu-item class="actions"
-									*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
+									*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']"
+									(click)="openInternmentAction(0)">
 									{{'ambulatoria.paciente.card.buttons.actions.ANAMNESIS' | translate}}</button>
 							</ng-container>
 							<ng-container
