tg-6316 [FE] Unifica datos de resumen en internación

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -200,8 +200,7 @@
 							<span>{{ 'ambulatoria.paciente.internacion.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
 						<ng-template matTabContent>
-							<app-internacion-paciente [internmentEpisodeId]="internmentEpisodeProcess.id">
-							</app-internacion-paciente>
+							<app-internacion-paciente [internmentEpisodeInfo]="internmentEpisodeProcess"></app-internacion-paciente>
 						</ng-template>
 					</mat-tab>
 					<mat-tab id="tab_indications">
