--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -81,8 +81,7 @@
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="!epicrisisDoc?.confirmed" [allergies]="internmentSummaryFacadeService.allergies$ | async"
-							[patientId]="patientId">
+							[editable]="!epicrisisDoc?.confirmed" [allergies]="internmentSummaryFacadeService.allergies$ | async">
 						</app-alergias-summary>
 					</ng-container>
 					<ng-container
