tg-6375 [FE] Agrega pop-up de Epicrisis

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -118,7 +118,8 @@
 									{{'ambulatoria.paciente.card.buttons.actions.EVOLUTION_NOTE' | translate}}</button>
 							</ng-container>
 							<ng-container *ngIf="anamnesisDoc?.confirmed && lastEvolutionNoteDoc?.confirmed">
-								<button mat-menu-item *appHasRole="['ESPECIALISTA_MEDICO']" class="actions">
+								<button mat-menu-item *appHasRole="['ESPECIALISTA_MEDICO']" class="actions"
+										(click)="openInternmentAction(2)">
 									{{'ambulatoria.paciente.card.buttons.actions.EPICRISIS' | translate}}</button>
 							</ng-container>
 						</ng-container>
