tg-6377 [FE] Agrega pop-up de Cambiar diagnostico principal

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/main-diagnosis-summary/main-diagnosis-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/main-diagnosis-summary/main-diagnosis-summary.component.html
@@ -10,7 +10,7 @@
 				<button mat-raised-button id="add_clinical_assestment_button" color="primary" (click)="goToClinicalEvaluation(mainDiagnosis.id)">
 					<span [translate]="'internaciones.internacion-paciente.main-diagnosis.actions.ADD_CLINICAL_ASSESTMENT'"></span>
 				</button>
-				<button mat-raised-button id="change_main_diagnosis_button" color="primary" (click)="goToChangeMainDiagnosis()">
+				<button mat-raised-button id="change_main_diagnosis_button" color="primary" (click)="openChangeMainDiagnosis()">
 					<span [translate]="'internaciones.internacion-paciente.main-diagnosis.actions.CHANGE'"></span>
 				</button>
 			</ng-container>
