tg-6278 [Mejora] Achicar campo de prefijo seguido de telefono

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -267,7 +267,7 @@
 						<div>
 							<span [translate]="'pacientes.form.PHONE_PREFIX'"></span>
 						</div>
-						<mat-form-field appearance="outline">
+						<mat-form-field class="prefix-field" appearance="outline">
 							<input id="phonePrefix" name="phonePrefix" (keyup)="updatePhoneValidators()" formControlName="phonePrefix" maxlength="10"
 								   placeholder="{{'pacientes.form.PHONE_PREFIX' | translate}}" matInput>
 							<mat-error *ngIf="hasError(form, 'required', 'phonePrefix')">
