--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -58,8 +58,8 @@
 							</mat-option>
 						</mat-select>
 					</mat-form-field>
-					<div class="form-row">
-						<mat-form-field appearance="outline">
+					<div fxLayout="row" fxLayoutGap="10px" fxLayout.xs="column">
+						<mat-form-field fxFlex="30%" appearance="outline">
 						<mat-label [translate]="'turnos.appointment.phoneNumber.PHONE_PREFIX'"></mat-label>
 							<input matInput type="text" id="phonePrefix" name="phonePrefix"
 								formControlName="phonePrefix"
@@ -72,7 +72,7 @@
 								translate="forms.MAX_LENGTH_ERROR" [translateParams]="{max: 10}">
 							</mat-error>
 					</mat-form-field>
-						<mat-form-field appearance="outline">
+						<mat-form-field fxFlex="70%" appearance="outline">
 						<mat-label [translate]="'turnos.appointment.phoneNumber.PHONE_NUMBER'"></mat-label>
 							<input matInput type="text" id="phoneNumber" name="phoneNumber"
 								formControlName="phoneNumber"
