tg-6439 [P1] Error por consola al ingresar en historia clínica del paciente

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -18,7 +18,7 @@
 					</div>
 					<mat-divider class="header-divider" [vertical]="true"></mat-divider>
 					<div id="allergy-container" fxLayout="row" fxLayoutAlign="center center">
-						<div *ngIf="criticalAllergies.length>0">
+						<div *ngIf="criticalAllergies?.length>0">
 							<div fxLayout="row" *ngFor="let allergy of criticalAllergies.slice(0,limitAllergies)">
 								<div fxLayout="column">
 									<mat-icon class="color-warn allergy-icon" fontSet="material-icons-outlined">block</mat-icon>
@@ -29,14 +29,14 @@
 									</div>
 								</div>
 							</div>
-							<div *ngIf="criticalAllergies.length>limitAllergies">
+							<div *ngIf="criticalAllergies?.length>limitAllergies">
 								<button class="allergies-button" (click)="openAllergies()" mat-button type="button" color="primary">
 							<span [translate]="'ambulatoria.paciente.card.MORE_CRITICAL_ALLERGIES'"
-							[translateParams]="{allergies: criticalAllergies.length-limitAllergies}"></span>
+							[translateParams]="{allergies: criticalAllergies?.length-limitAllergies}"></span>
 								</button>
 							</div>
 						</div>
-						<div *ngIf="criticalAllergies.length==0">
+						<div *ngIf="criticalAllergies?.length==0">
 							<div fxLayout="row">
 								<div fxLayout="column">
 									<mat-icon class="color-disabled allergy-icon" fontSet="material-icons-outlined">block</mat-icon>
