tg-6415. [FE] Crear componente de "turnos asignados"

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -242,6 +242,9 @@
 					</mat-card-content>
 				</mat-card>
 			</div>
+			<div *appHasRole="['ADMINISTRATIVO']">
+				<app-assigned-appointments [patientId]="patientId"></app-assigned-appointments>
+			</div>
 		</div>
 	</div>
 </app-content>
