tg-6040 [MEJORA] El botón "Agregar otro Procedimiento" debe estar situado a la izquierda

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
@@ -58,7 +58,7 @@
 		<button
 			[ngClass]="{'activate-button': (!showActionsService?.getIsNotPreviousProcedureSet() && !selectedSurfaces.length), 'disable-button': (showActionsService?.getIsNotPreviousProcedureSet() || selectedSurfaces.length)}"
 			mat-button type="button" onclick="this.blur()" (click)="addTypeaheadProcedure()" color="primary"
-			style="font-size: 14px;">
+			class="text-button">
 			+ Agregar otro procedimiento:
 		</button>
 	</div>
