--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -4,7 +4,7 @@
 		<div *ngIf="(internmentEpisodeSummary$ | async) as internmentEpisodeSummary" fxLayout="column"
 			fxLayoutGap="20px">
 			<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
-				
+
 				<ng-container *ngIf="showDischarge">
 					<button mat-flat-button id="administrative_discharge_button" color="primary"
 						*appHasRole="['ADMINISTRATIVO']" (click)="goToAdministrativeDischarge()">
@@ -81,7 +81,8 @@
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="!epicrisisDoc?.confirmed" [allergies]="internmentSummaryFacadeService.allergies$ | async">
+							[editable]="!epicrisisDoc?.confirmed" [allergies]="internmentSummaryFacadeService.allergies$ | async"
+							[patientId]="patientId">
 						</app-alergias-summary>
 					</ng-container>
 					<ng-container
