--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/component/assigned-appointment/assigned-appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/component/assigned-appointment/assigned-appointment.component.html
@@ -1,15 +1,17 @@
 <div fxLayout="column" fxLayoutGap="15px">
 
-    <div fxLayout="row">
-        <div fxFlex="66.67" fxLayout="row" fxLayoutGap="5px">
+    <div fxLayout="row" fxLayoutGap="10px">
+        <div fxFlex="60" fxLayout="row" fxLayoutGap="5px">
             <mat-icon color="primary"> person_outline </mat-icon>
-            <span class="mat-body-2"> {{ appointment.professionalName }} </span>
-            <span class="mat-caption line-height">
-                {{ 'pacientes.assigned-appointment.LICENSE_NUMBER_ACRONYM' | translate }}
-                {{ appointment.license }}
-            </span>
+            <div fxLayout="column">
+                <span class="mat-body-2"> {{ appointment.professionalName }} </span>
+                <span class="mat-caption">
+                    {{ 'pacientes.assigned-appointment.LICENSE_NUMBER_ACRONYM' | translate }}
+                    {{ appointment.license }}
+                </span>
+            </div>
         </div>
-        <div fxFlex="33.33" fxLayout="row" fxLayoutGap="5px">
+        <div fxFlex="calc(40%-10px)" fxLayout="row" fxLayoutGap="5px">
             <mat-icon color="primary" fontSet="material-icons-outlined"> add_box </mat-icon>
             <div fxLayout="column">
                 <span *ngFor="let specialty of appointment.specialties" class="mat-body line-height">
@@ -19,20 +21,20 @@
         </div>
     </div>
 
-    <div fxLayout="row">
-        <div fxFlex="33.33" fxLayout="row" fxLayoutGap="5px">
+    <div fxLayout="row" fxLayoutGap="10px">
+        <div fxFlex="40" fxLayout="row" fxLayoutGap="5px">
             <mat-icon color="primary" fontSet="material-icons-outlined"> event </mat-icon>
             <span class="mat-body capitalize-first-letter line-height">
                 {{ getViewDate() }}
             </span>
         </div>
-        <div fxFlex="33.33" fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center start">
+        <div fxFlex="calc(20%-10px)" fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center start">
             <mat-icon color="primary"> query_builder </mat-icon>
             <span class="mat-body line-height">
                 {{ getViewTime() }} hs
             </span>
         </div>
-        <div fxFlex="33.33" fxLayout="row" fxLayoutGap="5px">
+        <div fxFlex="calc(40%-10px)" fxLayout="row" fxLayoutGap="5px">
             <mat-icon color="primary" fontSet="material-icons-outlined"> meeting_room </mat-icon>
             <span class="mat-body-2"> {{ appointment.office }} </span>
         </div>
